--- a/TODO
+++ b/TODO
@@ -19,4 +19,8 @@ Sat Dec 18 09:08:47 EST 2010
 
 - use IMAP EXISTS command to check for updates.
 
+------------------------------------------------------------------------
+Mon Dec 20 08:14:54 EST 2010
 
+- make the 100 list batch limit adjustable, through some flag or env
+  variable
