--- a/TODO
+++ b/TODO
@@ -28,3 +28,8 @@ Mon Dec 20 08:14:54 EST 2010
 - starring from msg window should keep the cursor there
 
 - starred messages should be indicated as such in msg window
+
+- after switching into a cached mailbox, check for update? or at least
+  show when the mailbox was last updated.
+
+
