--- a/TODO
+++ b/TODO
@@ -38,3 +38,8 @@ Mon Dec 20 08:14:54 EST 2010
 - refactor all the flagging business into tighter code
 
 - let use mark msgs as unread
+
+- if the top line in the list is in a range, it can get deleted. don't
+  allow this.
+
+
