--- a/TODO
+++ b/TODO
@@ -40,6 +40,6 @@ Mon Dec 20 08:14:54 EST 2010
 - let use mark msgs as unread
 
 - if the top line in the list is in a range, it can get deleted. don't
-  allow this.
+  allow this. (minor)
 
 
