--- a/TODO
+++ b/TODO
@@ -44,3 +44,7 @@ Mon Dec 20 08:14:54 EST 2010
 
 - allow range commands from command prompt, such as VDelete, etc.
   because you can show line numbers and these may be useful.
+
+- create an easy way to turn a regular / search into a mailbox search
+
+
