--- a/TODO
+++ b/TODO
@@ -75,7 +75,7 @@ message cache is consuming 6mb
 D, [2010-12-20T10:00:25.637020 #16797] DEBUG -- : PRUNING MESSAGE CACHE;
 message cache is consuming 6mb
 
-
 - still some message cache sync issues
 
+- redesign the whole message cache system with unit testing
 
