--- a/TODO
+++ b/TODO
@@ -89,4 +89,7 @@ Thu Dec 23 08:40:57 EST 2010
 * offscreen to the right, and send this over to imap client for any
 * action.
 
+------------------------------------------------------------------------
+Fri Dec 24 10:13:58 EST 2010
 
+- make contacts groups to add a bunch of contacts at once?
