--- a/TODO
+++ b/TODO
@@ -93,3 +93,12 @@ Thu Dec 23 08:40:57 EST 2010
 Fri Dec 24 10:13:58 EST 2010
 
 - make contacts groups to add a bunch of contacts at once?
+
+
+------------------------------------------------------------------------
+Sat Dec 25 09:07:28 EST 2010
+
+- change vmail to take a file or files (e.g. globbed) as argument and
+  send them. This will let the user enter password on invocation.
+
+
