--- a/TODO
+++ b/TODO
@@ -101,4 +101,8 @@ Sat Dec 25 09:07:28 EST 2010
 - change vmail to take a file or files (e.g. globbed) as argument and
   send them. This will let the user enter password on invocation.
 
+------------------------------------------------------------------------
+Thu Dec 30 11:28:05 EST 2010
+
+1/6 deadline for doing How I Work Screencast
 
